Add Ubuntu-compatibile roles

--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -3,6 +3,6 @@
 api_password: '<proxmox_api_password>'
 ssh_pubkey: '<ssh_public_key>'
 ipa_domain: 'ipa.site.domain'
-ipa_realm: 'IPA.site.domain'
+ipa_realm: 'IPA.SITE.DOMAIN'
 ipa_principal: 'admin'
 ipa_principal_password: '<ipa_admin_password>'
