--- a/host_vars/app1.site.domain.yml
+++ b/host_vars/app1.site.domain.yml
@@ -5,5 +5,6 @@ vmid: '111'
 cores: '2'
 memory: '2048'
 swap: '0'
+disk: '5'
 onboot: true
 network: '{"net0":"name=eth0,ip=10.0.10.126/24,gw=10.0.10.1,ip6=dhcp,bridge=vmbr1"}'
